# TracingJITCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  main.cpp
include/: AsmHelper.hpp  Assembler.hpp  Compiler.hpp  Definitions.hpp  HexHelper.hpp  Interperter.hpp  Interpreter.hpp  MemoryHandler.hpp  Profiler.hpp  Program.hpp  RunTime.hpp  TraceHandler.hpp  TraceRecorder.hpp  x86.hpp
include/JVM/: ByteCodes.hpp  ClassFile.hpp  Decoder.hpp  Parser.hpp
include/utils/: LRUQueue.hpp
src/: Assembler.cpp  Compiler.cpp  Definitions.cpp  Interpreter.cpp  MemoryHandler.cpp  Profiler.cpp  Program.cpp  RunTime.cpp  TraceHandler.cpp  TraceRecorder.cpp  main.cpp  x86.cpp
src/JVM/: ClassFile.cpp  Decoder.cpp  Parser.cpp
src/utils/: LRUQueue.cpp
test/: AntiTautologi.java  ChineseRemainder.java  DoubleFactorial.java  DoubleFibonacci.java  EvenMoreLoops.java  Factorial.java  FloatFactorial.java  FloatFibonacci.java  IsPrime.java  LongFactorial.java  LongFibonacci.java  MEDouble.asm  ManyVariables.java  ManyVariablesMulTrace.java  MixedExecution.asm  MixedExecutionTwoVars.asm  MoreLoops.java  ReportExample.j  SingleLoop.java  SingleLoopWithHotSideExit.java  SingleLoopWithIfStatement.j  TwoHotSideExits.java  asm.asm  data.csv  experiments.py  main.java  other.asm  present.py  test.py
